--- a/templates/index.html
+++ b/templates/index.html
@@ -43,10 +43,10 @@
     </section>
 
     <footer>
-      <div class="watermark">@alan_richard</div>
-      <p>Fonte, B3 e Dados de Mercado, CarteiraFundos, BHM Options. Última coleta automática, <span id="updateDate"></span>. Valores em bilhões de reais.</p>
-      <p><a href="https://instagram.com/alan_richard" target="_blank">@alan_richard</a>  •  Dashboard Fluxo de Investidores</p>
-    </footer>
+  <div class="watermark">@alan_richard</div>
+  <p>Fonte, B3 e Dados de Mercado. Última coleta automática, <span id="updateDate"></span>. Valores em bilhões de reais.</p>
+  <p><a href="https://instagram.com/alan_richard" target="_blank">@alan_richard</a> • Dashboard Fluxo de Investidores</p>
+</footer>
   </div>
 
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
