--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 
     <footer>
   <div class="watermark">@alan_richard</div>
-  <p>Fonte, B3 e Dados de Mercado. Última coleta automática, <span id="updateDate"></span>. Valores em bilhões de reais.</p>
+  <p>Fonte: B3 - Última coleta automática, <span id="updateDate"></span>. Valores em bilhões de reais.</p>
   <p><a href="https://instagram.com/alan_richard" target="_blank">@alan_richard</a> • Dashboard Fluxo de Investidores</p>
 </footer>
   </div>
